fix gap

--- a/src/index.scss
+++ b/src/index.scss
@@ -78,6 +78,7 @@ a {
 
   @media screen and (min-width: 1200px) {
     font-size: 16px;
+    gap: 12px;
   }
 }
 
